<resources>
    <string name="app_name">Digital Coins</string>
    <string name="today_volume">Today Volume</string>
    <string name="low">Low</string>
    <string name="ask">Ask</string>
    <string name="bid">Bid</string>
    <string name="high">High</string>
    <string name="today_open">Today Open</string>
    <string name="day">Last 24hr</string>
    <string name="month">Last 30 days</string>
    <string name="all_time">All Time</string>
</resources>
