<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="coin"
            type="cihan.samples.bitcoinpriceindex.data.model.Coin" />

        <variable
            name="currencyText"
            type="String" />

        <variable
            name="coinText"
            type="String" />

        <variable
            name="chartLoading"
            type="boolean" />

        <import type="android.view.View" />

    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:animateLayoutChanges="true"
            tools:context=".main.MainActivity">

            <View
                android:id="@+id/tool"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_margin="12dp"
                android:layout_marginTop="24dp"
                android:background="@drawable/bg_gradient_tool"
                android:elevation="3dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <Spinner
                android:id="@+id/spinner_markets"
                android:layout_width="140dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:drawSelectorOnTop="true"
                android:elevation="4dp"
                android:entries="@array/markets"
                android:paddingStart="8dp"
                android:spinnerMode="dropdown"
                app:layout_constraintEnd_toStartOf="@+id/spinner_coins"
                app:layout_constraintStart_toStartOf="@+id/tool"
                app:layout_constraintTop_toTopOf="@+id/tool" />

            <Spinner
                android:id="@+id/spinner_coins"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:drawSelectorOnTop="true"
                android:elevation="4dp"
                android:entries="@array/coins"
                android:spinnerMode="dropdown"
                app:layout_constraintEnd_toStartOf="@+id/spinner_currencies"
                app:layout_constraintStart_toEndOf="@+id/spinner_markets"
                app:layout_constraintTop_toTopOf="@+id/tool" />

            <Spinner
                android:id="@+id/spinner_currencies"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:drawSelectorOnTop="true"
                android:elevation="4dp"
                android:entries="@array/currencies"
                android:spinnerMode="dropdown"
                app:layout_constraintEnd_toEndOf="@+id/tool"
                app:layout_constraintStart_toEndOf="@+id/spinner_coins"
                app:layout_constraintTop_toTopOf="@+id/tool" />

            <include
                android:id="@+id/coin_last"
                layout="@layout/dashboard_coin_last"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="12dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="24dp"
                app:coin="@{coin}"
                app:coinText="@{coinText}"
                app:currencyText="@{currencyText}"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/spinner_markets" />


            <android.support.design.widget.TabLayout
                android:id="@+id/tabs"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginTop="32dp"
                android:background="@color/soft_bg_color"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/coin_last"
                app:tabSelectedTextColor="@android:color/black"
                app:tabTextColor="@android:color/darker_gray">

                <android.support.design.widget.TabItem
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/day" />

                <android.support.design.widget.TabItem
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/month" />

                <android.support.design.widget.TabItem
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/all_time" />

            </android.support.design.widget.TabLayout>


            <cihan.samples.bitcoinpriceindex.ui.dashboard.CoinHistoryChartView
                android:id="@+id/chart"
                android:layout_width="0dp"
                android:layout_height="240dp"
                android:layout_marginStart="4dp"
                android:layout_marginTop="24dp"
                android:visibility="@{chartLoading ? View.GONE : View.VISIBLE}"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tabs" />

            <ProgressBar
                android:id="@+id/progress"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:elevation="4dp"
                android:padding="10dp"
                android:visibility="@{chartLoading ? View.VISIBLE : View.GONE}"
                app:layout_constraintBottom_toBottomOf="@+id/chart"
                app:layout_constraintTop_toTopOf="@+id/chart"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginTop="120dp"
                tools:visibility="visible" />


        </android.support.constraint.ConstraintLayout>


    </ScrollView>


</layout>